# perg

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
cli/: Cargo.toml
cli/src/: args.rs  main.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  lib.rs  matcher.rs  printer.rs  summary.rs  utils.rs
core/src/output/: mod.rs  printer.rs
core/src/searchers/: file.rs  mod.rs  recursive.rs  stdin.rs
core/test_data/: lorem.txt  werther.txt
