[package]
name = "perg-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
colored = "2.0.0"
regex = "1.5.6"
thiserror = "1.0.31"
walkdir = "2.3.2"

[dev-dependencies]
assert_matches = "1.5.0"
maplit = "1.0.2"
test-case = "2.1.0"