[package]
name = "perg-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
maplit = "1.0.2"
regex = "1.10.6"
thiserror = "1.0.63"
walkdir = "2.5.0"

[dev-dependencies]
assert_matches = "1.5.0"
test-case = "3.3.1"
